Tue Mar 24 22:23:33 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/extention.rdoc: move from toplevel document and added extname.
	* doc/extention.ja.rdoc: ditto.

Tue Mar 24 22:06:58 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/standard_library.rdoc: strip.

Tue Mar 24 22:06:27 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/standard_library.rdoc: move Thread to Extentions.

Tue Mar 24 21:59:10 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/contributing.rdoc: update Maintainers list.

Tue Mar 24 19:10:24 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_writebarrier_generational): fix messages for rb_bug().
	  Remove `rb_' prefix.

	* gc.c (gc_writebarrier_incremental): ditto.

Tue Mar 24 17:34:01 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* README.ja.md: should be chunibyo.

Tue Mar 24 17:30:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/file/fs.c (get_fsname): return filesystem name by
	  statfs/statvfs.  [ruby-core:68624] [Bug #10998]

Tue Mar 24 16:46:02 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: now doesn't required spaces just after
	  `!`.

Mon Mar 23 23:18:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_close): don't raise on dobule close for consistent to
	  IO#close.  [Feature #10950]

Mon Mar 23 21:22:07 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (rb_readlink): move from file.c for better buffer
	  allocation and the result encoding.

	* win32/win32.c (wreadlink, rb_w32_ureadlink): implement readlink().

Mon Mar 23 14:40:45 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (winnt_stat): stat with following symbolic links.

	* win32/win32.c (winnt_lstat): rename old winnt_stat, which does
	  not follow symbolic links.

Mon Mar 23 01:44:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (r_symreal): register symbol names as strings first so
	  that r_symlink always returns valid names.